<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Picker Plus</string>

    <!-- Account type -->
    <string name="facebook">Facebook</string>
    <string name="flickr">Flickr</string>
    <string name="instagram">Instagram</string>
    <string name="picasa">Picasa</string>
    <string name="take_photos">Take a photo</string>
    <string name="record_video">Record a video</string>
    <string name="last_photo">Last photo taken</string>
    <string name="last_video_captured">Last video captured</string>
    <string name="all_media">All media</string>
    <string name="camera_media">Camera media</string>

    <!-- Exceptions -->
    <string name="parsing_exception">Invalid response format.</string>
    <string name="http_exception">Check your internet connection and try again.</string>
    <string name="http_error">Server Problem. Please try again later.</string>
    <string name="general_error">An error has occurred. Please try again later.</string>

    <!-- UI -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="albums">Albums</string>
    <string name="loading_albums">Loading albums...</string>
    <string name="loading_media">Loading media...</string>
    <string name="select_a_photo">Select a Photo</string>
    <string name="select_photos">Select Photos</string>
    <string name="select_a_video">Select a Video</string>
    <string name="select_videos">Select Videos</string>
    <string name="select_media">Select Media</string>
    <string name="select_video_source">Select Video Source</string>
    <string name="select_media_source">Select Media Source</string>
    <string name="select_photo_source">Select Photo Source</string>
    <string name="title_default">Default</string>
    <string name="title_user">User</string>
    <string name="button_use_media">Use</string>
    <string name="button_navigation_services_close">Close</string>
    <string name="button_navigation_services_logout">Logout</string>
    <string name="button_navigation_services">Services</string>
    <string name="choose_service">Choose Service</string>

    <!-- Toast -->
    <string name="toast_choose_photos">Please select photos</string>
    <string name="toast_feature_camera">Your device doesn\'t have a camera</string>
    <string name="no_camera_photos">No photos in camera roll</string>
    <string name="no_albums_found">No albums found</string>
    <string name="no_album_selected">No album selected</string>
    <string name="connect_to_internet_to_cofigure_services">Connect your device to the Internet for configuring the services</string>
    <string name="expired_session_logging_in">Your session has expired. Logging in again...</string>
    <string name="sign_out">Sign out</string>
    <string name="toast_signed_out">Signed out</string>
    <string name="toast_memory_full">Camera cannot start, memory is full.</string>

</resources>